Fix dark mode infoBox
git-svn-id: file:///home/svn/DVA2006@17942 1e6d2d28-e1fb-0310-b8ab-81908d8c6b6a

--- a/static/css/legacy/main.css
+++ b/static/css/legacy/main.css
@@ -431,6 +431,7 @@ div.mapInfoBox {
 	white-space: nowrap;
 	font-family: tahoma, verdana, sans-serif;
 	font-size: 8pt;
+	color: #000000;
 }
 
 div.mapInfoBox.navdata, div.mapInfoBox.pilotBoard {
